[package]
name = "nanorpc"
version = "0.1.12"
edition = "2021"
repository = "https://github.com/themeliolabs/nanorpc"
license = "ISC"
description = "a subset of JSON-RPC 2.0, with magical autogeneration of servers and clients"

[workspace]
members = ["nanorpc-derive"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde_json = "1.0.117"
async-trait = "0.1.80"
serde = { version = "1.0.201", features = ["derive"] }
fastrand = "2.1.0"
nanorpc-derive = { version = "0.1.3", path = "nanorpc-derive" }
thiserror = "1.0.60"
anyhow = "1.0.83"
futures-lite = "2.3.0"
log = "0.4.21"

[dev-dependencies]
anyhow = "1.0.83"
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3.7"
reqwest = { version = "0.12.4", features = ["json"] }
smol = "2.0.0"
clap = { version = "4.5.4", features = ["derive", "env", "cargo"] }
