[package]
name = "nanorpc-derive"
version = "0.1.0"
edition = "2021"
repository="https://github.com/themeliolabs/nanorpc"
license="ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version="1.0", features=["full"]}
quote = "1.0"