[package]
name = "nanorpc-derive"
version = "0.1.5"
edition = "2021"
repository="https://github.com/themeliolabs/nanorpc"
license="ISC"
description="macros for nanorpc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.63", features = ["full"] }
quote = "1.0.36"
